--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
 
   <main class="flex-row justify-space-between">
-    
     <div class="col-12 col-md-4">
       <div class="card">
         <h3 class="card-header text-uppercase">Search By User</h3>
@@ -30,8 +29,17 @@
           <button type="submit" class="btn">Get User</button>
         </form>
       </div>
-    </div>
 
+      <div class="card">
+        <h3 class="card-header text-uppercase">Search by Topic</h3>
+        <div class="card-body" id="language-buttons">
+          <button data-language="javascript" class="btn">JavaScript</button>
+          <button data-language="html" class="btn">HTML</button>
+          <button data-language="css" class="btn">CSS</button>
+        </div>
+      </div>
+    </div>
+    
     <div class="col-12 col-md-8">
       <div class="col-12 col-md-8">
         <h2 class="subtitle">Showing Repositories for: <span id="repo-search-term"></span></h2>
@@ -41,7 +49,7 @@
   </main>
 
   <script src="./assets/js/homepage.js"></script>
-  
+
 </body>
 
 </body>
